--- a/styles/main.css
+++ b/styles/main.css
@@ -5,3 +5,14 @@ body {
     background-color: black;
     color: whitesmoke;
 }
+h1 {
+    color: white;
+    font-family: "press Start 2P", "consolas";
+}
+p {
+    color: rgb(7, 190, 17);
+    font-family: "consolas", "sans-serif";
+    font-style: italic;
+    font-weight: bold;
+
+}
